[t2817] Fixed overflow issue on landing pages at small screen sizes

--- a/public/media/css/page.css
+++ b/public/media/css/page.css
@@ -125,6 +125,7 @@ Layout styles
   #outer-wrapper {
     position: relative;
     border-top: none;
+    overflow: hidden;
   }
 
   #wrapper {
